--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
+    <title>Technovation 2020</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
     <div class="container">
-        <video autoplay="true" loop>
-            <source src="./logo.mp4" type="video/mp4">
-        </video>
+        <video src="./media/logo.mp4" autoplay muted loop>
     </div>
 </body>
 
