--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <video src="./media/logo.mp4" autoplay muted loop>
+        <video src="./media/logo.m4v" autoplay muted loop>
     </div>
 </body>
 
