--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Technovation 2020</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
-<body>
-    <div class="container">
-        <video src="./media/logo.m4v" autoplay muted loop>
-    </div>
+<body bgcolor="black">
+    <!-- <div class="container"> -->
+    <video autoplay muted loop>
+        <source src="./media/logo.m4v" type="video/mp4">
+    </video>
+    <!-- </div> -->
 </body>
 
 </html>
