--- a/index.html
+++ b/index.html
@@ -121,16 +121,17 @@
                             <div class="col-md-6 col-sm-12">
                                 <!--Column1-->
                                 <div class="footer-pad">
-                                    <h2>Heading 1</h2>
+                                    <h2>Contact Us</h2>
                                     <ul class="list-unstyled">
                                         <li>
-                                            <a href="#"></a>
+                                            <a></a>
                                         </li>
-                                        <li><a href="#">Payment Center</a></li>
-                                        <li><a href="#">Contact Directory</a></li>
-                                        <li><a href="#">Forms</a></li>
-                                        <li><a href="#">News and Updates</a></li>
-                                        <li><a href="#">FAQs</a></li>
+                                        <li><a>Sankalp Rath : <i class="fa fa-phone"></i> 94397 17907</a></li>
+                                        <li>
+                                            <a>Aradhana Behera :  <i class="fa fa-phone"></i> 94390 19467</a>
+                                        </li>
+                                        <li><a>Sitakanta Bej : <i class="fa fa-phone"></i> 78943 97514</a></li>
+
                                     </ul>
                                 </div>
                             </div>
@@ -139,9 +140,9 @@
                                 <div class="footer-pad">
                                     <h2>Follow Us</h2>
                                     <ul class="social-network social-circle">
-                                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#" class="icoFacebook" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#" class="icoLinkedin" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://www.facebook.com/Technovation2020/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="" class="icoFacebook" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.instagram.com/technovation2020/" class="icoLinkedin" title="Instagram"><i class="fa fa-instagram"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -149,7 +150,7 @@
                         <div class="row">
                             <div class="col-md-12 dev">
                                 <div class="dev header">Designed and Developed By</div>
-                                <div class="dev content">Yashobanta Kumar Behera</div>
+                                <div class="dev content"><a href="https://www.facebook.com/yashwant.kumar.988711">Yashobanta Kumar Behera</a></div>
 
                             </div>
                         </div>
