--- a/index.html
+++ b/index.html
@@ -120,44 +120,47 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
                                 <!--Column1-->
-                                <div class="footer-pad">
+                                <div class=" footer-pad ">
                                     <h2>Contact Us</h2>
-                                    <ul class="list-unstyled">
+                                    <ul class="list-unstyled ">
                                         <li>
                                             <a></a>
                                         </li>
-                                        <li><a>Sankalp Rath : <i class="fa fa-phone"></i> 94397 17907</a></li>
+                                        <li><a>Sankalp Rath : <i class="fa fa-phone "></i> 94397 17907</a></li>
                                         <li>
-                                            <a>Aradhana Behera :  <i class="fa fa-phone"></i> 94390 19467</a>
+                                            <a>Aradhana Behera :  <i class="fa fa-phone "></i> 94390 19467</a>
                                         </li>
-                                        <li><a>Sitakanta Bej : <i class="fa fa-phone"></i> 78943 97514</a></li>
+                                        <li><a>Sitakanta Bej : <i class="fa fa-phone "></i> 78943 97514</a></li>
 
                                     </ul>
                                 </div>
                             </div>
-
-                            <div class="col-md-6">
-                                <div class="footer-pad">
+                            <div class="col-md-6 ">
+                                <div class="footer-pad ">
                                     <h2>Follow Us</h2>
-                                    <ul class="social-network social-circle">
-                                        <li><a href="https://www.facebook.com/Technovation2020/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="" class="icoFacebook" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="https://www.instagram.com/technovation2020/" class="icoLinkedin" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                                    <ul class="social-network social-circle ">
+                                        <li><a href="https://www.facebook.com/Technovation2020/ " class="icoFacebook " title="Facebook "><i class="fa fa-facebook "></i></a></li>
+                                        <li><a href=" " class="icoFacebook " title="Twitter "><i class="fa fa-twitter "></i></a></li>
+                                        <li><a href="https://www.instagram.com/technovation2020/ " class="icoLinkedin " title="Instagram "><i class="fa fa-instagram "></i></a></li>
+
                                     </ul>
+                                    <br>
+                                    <a href="media/Brochure_Technovation_2020.pdf"> <button class="btn btn-outline-info brochure">Download Brochure</button></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-12 dev">
-                                <div class="dev header">Designed and Developed By</div>
-                                <div class="dev content"><a href="https://www.facebook.com/yashwant.kumar.988711">Yashobanta Kumar Behera</a></div>
+
+                        <div class="row ">
+                            <div class="col-md-12 dev ">
+                                <div class="dev header ">Designed and Developed By</div>
+                                <div class="dev content "><a href="https://www.facebook.com/yashwant.kumar.988711 ">Yashobanta Kumar Behera</a></div>
 
                             </div>
                         </div>
                         <br>
-                        <div class="row">
-                            <div class="col-md-12 copy">
-                                <p class="text-center">&copy; Copyright 2020 IGIT Sarang. All Rights Reserved.</p>
+                        <div class="row ">
+                            <div class="col-md-12 copy ">
+                                <p class="text-center ">&copy; Copyright 2020 IGIT Sarang. All Rights Reserved.</p>
                             </div>
                         </div>
 
@@ -167,14 +170,14 @@
             </footer>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js " integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin=" anonymous "></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js "></script>
+    <script src="js/wow.min.js "></script>
+    <script src="js/main.js "></script>
 
 </body>
 
