event card fixed with contact us

--- a/contactus.html
+++ b/contactus.html
@@ -50,16 +50,30 @@
         </div>
     </nav>
     <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(42, 1, 61));padding: 10vh 5%;min-height: 100vh;">
-        <div style="font-family:'font1';color: white;font-size: 5em;text-align: center;">
+        <div style="font-family:'font1';color: white;font-size: 7em;text-align: center;margin-top: 1em;margin-bottom: 1em;">
             Contact Us
 
         </div>
 
 
+        <div class="card-c">
+            <div class="card__image-container">
+                <img class="card__image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+            </div>
 
-        <div class="card" style="width: 40vh;height: 50vh;border: 1px white;">
+            <svg class="card__svg" viewBox="0 0 800 500">
+       
+               <path d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400 L 800 500 L 0 500" stroke="transparent" fill="#333"/>
+               <path class="card__line" d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400" stroke="pink" stroke-width="3" fill="transparent"/>
+             </svg>
 
+            <div class="card__content">
+                <h2 class="card__title">Sorojananda Mishra</h2>
+                <p>HOD,CSEA</p>
+            </div>
         </div>
+
+    </div>
     </div>
 
 
@@ -70,6 +84,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/contactus.js"></script>
 
 </body>
 
