--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div id="contents">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-            <a class="navbar-brand nav-brand-text" href="#"><b>TECHNOVATION <span style="font-size:1.1em;">2020</span></b></a>
+            <a class="navbar-brand nav-brand-text" href="index.html"><b>TECHNOVATION <span style="font-size:1.1em;">2020</span></b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
