font sixed in contact us

--- a/sponsor.html
+++ b/sponsor.html
@@ -50,7 +50,7 @@
             </ul>
         </div>
     </nav>
-    <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(42, 1, 61));padding: 10vh 5%;min-height: 100vh;">
+    <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,#09203f , #537895);padding: 10vh 5%;min-height: 100vh;">
 
 
 
