--- a/events.html
+++ b/events.html
@@ -100,7 +100,7 @@
                                 <div class="event-card item2 "></div>
                                 <div class="event-card item3 "></div>
                                 <div class="event-card item4 "></div>
-                                <img class="event-card item5 " src="images/event2.jpg"></img>
+                                <img class="event-card item5 " src="images/star-night.jpg"></img>
                                 <div class="event-card item5 " style="background:transparent;"></div>
                                 <div class="event-card item6 "></div>
                                 <div class="event-card item7 "></div>
