--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <!--Column1-->
                                 <div class=" footer-pad ">
-                                    <h2>Contact Us</h2>
+                                    <h2 style="font-family: 'Patua One', cursive;">Contact Us</h2>
                                     <ul class="list-unstyled ">
                                         <li>
                                             <a></a>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="col-md-6 ">
                                 <div class="footer-pad ">
-                                    <h2>Follow Us</h2>
+                                    <h2 style="font-family: 'Patua One', cursive;">Follow Us</h2>
                                     <ul class="social-network social-circle ">
                                         <li><a href="https://www.facebook.com/Technovation2020/ " class="icoFacebook " title="Facebook "><i class="fa fa-facebook "></i></a></li>
                                         <li><a href=" " class="icoFacebook " title="Twitter "><i class="fa fa-twitter "></i></a></li>
