--- a/faqs.html
+++ b/faqs.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Girassol|Josefin+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mirza&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -53,7 +54,7 @@
     </nav>
     <div style="width: 100%;height: auto;background: linear-gradient(to right bottom,rgb(34, 0, 0),rgb(109, 0, 103));padding: 10vh 5%;min-height: 100vh;">
         <div class="text-center">
-            <p style="font-family: 'Lobster', cursive;font-size: 4em;color: white;padding: 2% 0% 5% 0%;">FAQS</p>
+            <p style="font-family: 'Lobster', cursive;font-size: 4em;color: white;padding: 2% 0% 5% 0%; text-shadow: -6px 6px 8px black;">FAQS</p>
         </div>
         <div class="container">
             <div class="row">
@@ -72,37 +73,37 @@
                         <!--Registration faq-->
                         <div id="reg-n-gen-b" class="d-block">
                             <a href="#x-q1" data-toggle="collapse" class="title">Why registration is necessary?</a>
-                            <div id="x-q1" class="collapse text-info">
+                            <div id="x-q1" class="collapse text-info text">
                                 Registering on the website will generate a unique MI number for you. This MI number is essential for participation or entry to all the activities going on during Mood Indigo! If you want to register for a competition or accommodation or collect concert
                                 passes against your college ID, you’ll need to have an MI number. Your MI number is the key to the best things the festival has to offer.
                             </div>
                             <br>
                             <a href="#x-q2" data-toggle="collapse" class="title">Why registration is necessary?</a>
-                            <div id="x-q2" class="collapse text-info">
+                            <div id="x-q2" class="collapse text-info text">
                                 Registering on the website will generate a unique MI number for you. This MI number is essential for participation or entry to all the activities going on during Mood Indigo! If you want to register for a competition or accommodation or collect concert
                                 passes against your college ID, you’ll need to have an MI number. Your MI number is the key to the best things the festival has to offer.
                             </div>
                             <br>
                             <a href="#x-q3" data-toggle="collapse" class="title">Why registration is necessary?</a>
-                            <div id="x-q3" class="collapse text-info">
+                            <div id="x-q3" class="collapse text-info text">
                                 Registering on the website will generate a unique MI number for you. This MI number is essential for participation or entry to all the activities going on during Mood Indigo! If you want to register for a competition or accommodation or collect concert
                                 passes against your college ID, you’ll need to have an MI number. Your MI number is the key to the best things the festival has to offer.
                             </div>
                             <br>
                             <a href="#x-q4" data-toggle="collapse" class="title">Why registration is necessary?</a>
-                            <div id="x-q4" class="collapse text-info">
+                            <div id="x-q4" class="collapse text-info text">
                                 Registering on the website will generate a unique MI number for you. This MI number is essential for participation or entry to all the activities going on during Mood Indigo! If you want to register for a competition or accommodation or collect concert
                                 passes against your college ID, you’ll need to have an MI number. Your MI number is the key to the best things the festival has to offer.
                             </div>
                             <br>
                             <a href="#x-q5" data-toggle="collapse" class="title">Why registration is necessary?</a>
-                            <div id="x-q5" class="collapse text-info">
+                            <div id="x-q5" class="collapse text-info text">
                                 Registering on the website will generate a unique MI number for you. This MI number is essential for participation or entry to all the activities going on during Mood Indigo! If you want to register for a competition or accommodation or collect concert
                                 passes against your college ID, you’ll need to have an MI number. Your MI number is the key to the best things the festival has to offer.
                             </div>
                             <br>
                             <a href="#x-q6" data-toggle="collapse" class="title">Why registration is necessary?</a>
-                            <div id="x-q6" class="collapse text-info">
+                            <div id="x-q6" class="collapse text-info text">
                                 Registering on the website will generate a unique MI number for you. This MI number is essential for participation or entry to all the activities going on during Mood Indigo! If you want to register for a competition or accommodation or collect concert
                                 passes against your college ID, you’ll need to have an MI number. Your MI number is the key to the best things the festival has to offer.
                             </div>
@@ -111,7 +112,7 @@
                         <!--Registration faq-->
                         <div id="acc-n-c-b" class="d-none">
                             <a href="#x-q6" data-toggle="collapse" class="title">What is the procedure for the online payment of accommodation fees?</a>
-                            <div id="x-q6" class="collapse text-info">
+                            <div id="x-q6" class="collapse text-info text">
                                 Once a particular contingent is finalized by CL and their accommodation is confirmed by Hospitality and PR Heads of the festival, each and every person with confirmed accommodation will be given a link to the payment portal where he/she needs to make
                                 the payment online. In case an individual wishes to make online payment of some other people in his/her contingent as well, the option for the same would be available
                             </div>
@@ -128,7 +129,7 @@
                         <!--Registration faq-->
                         <div id="multi-b" class="d-none">
                             <a href="#x-q6" data-toggle="collapse" class="title">Why registration is necessary?</a>
-                            <div id="x-q6" class="collapse text-info">
+                            <div id="x-q6" class="collapse text-info text">
                                 Registering on the website will generate a unique MI number for you. This MI number is essential for participation or entry to all the activities going on during Mood Indigo! If you want to register for a competition or accommodation or collect concert
                                 passes against your college ID, you’ll need to have an MI number. Your MI number is the key to the best things the festival has to offer.
                             </div>
