--- a/contactus.html
+++ b/contactus.html
@@ -59,9 +59,9 @@
         </div>
 
         <div class="container-fluid">
-            <div style="color: white;font-size: 2em;text-align: center;margin-top: 1em;margin-bottom: 1em;font-family: 'Nunito', sans-serif;">
+            <div class="team-title">
 
-                Chief Event Co-ordinator
+                Chief Event Coordinator
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
