event  image changes

--- a/events.html
+++ b/events.html
@@ -103,7 +103,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/star-night.jpg">
+                                    <img class="item-img" src="images/cultural/star-night.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -166,7 +166,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/mrnmrs.jpg">
+                                    <img class="item-img" src="images/cultural/mrnmrs_tech.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
