--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div id="load">
-        <img class="mx-auto" style="margin-top: 20vh;" src="images/loading-icon.svg">
+        <img class="mx-auto" style="margin-top: 20vh;" src="images/Ripple-1s-200px.svg">
         <br>
         <span style="font-size: 2.5rem; font-family: 'Oswald', sans-serif;">Technovation 2020</span>
     </div>
