--- a/events.html
+++ b/events.html
@@ -34,7 +34,7 @@
     <div id="load">
         <img class="mx-auto" style="margin-top: 20vh;" src="images/loading-icon.svg">
         <br>
-        <span style="font-size: 2.5rem; font-family: 'Oswald', sans-serif;">Technovation 2020</span>
+        <span class=" text">Technovation 2020</span>
     </div>
     <div id="contents">
 
