--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="load">
         <img class="mx-auto" style="margin-top: 20vh;" src="images/Ripple-1s-200px.svg">
         <br>
-        <span style="font-size: 2.5rem; font-family: 'Oswald', sans-serif;">Technovation 2020</span>
+        <span class="text">Technovation 2020</span>
     </div>
     <div id="contents">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
