--- a/contactus.html
+++ b/contactus.html
@@ -59,11 +59,78 @@
         </div>
 
         <div class="container-fluid">
-            <div class="team-title">
 
-                Chief Event Coordinator
-            </div>
             <div class="row">
+                <div class="col-lg-5 col-md-5 col-sm-5  col-xs-12">
+                    <div class="contactus-content-h">
+                        <a class="heading selected" id="chief-cood">Chief Coordinator</a>
+                        <a class="heading" id="chief-e-cood">Chief Event Coordinator</a>
+                        <a class="heading" id="treasure">Treasure</a>
+                        <a class="heading" id="chief-admin">Chief Admin</a>
+                        <a class="heading" id="public-r">Public Relation</a>
+                        <a class="heading" id="technical">Technical Event</a>
+                        <a class="heading" id="cultural">Cultural Event</a>
+                        <a class="heading" id="sponsorship">Sponsorship</a>
+                        <a class="heading" id="logistic">Logistics</a>
+                        <a class="heading" id="website">Website</a>
+                        <a class="heading" id="media">Media & Publicity</a>
+                        <a class="heading" id="decoration">Decoration</a>
+                        <a class="heading" id="design">Design</a>
+                        <a class="heading" id="arena">Arena</a>
+                        <a class="heading" id="fun-e">Fun Event</a>
+                        <a class="heading" id="hospitality">Hospitality</a>
+                        <a class="heading" id="workforce">Workforce</a>
+
+                    </div>
+                </div>
+                <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                            <div class="card-contact-us">
+                                <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+
+                                <div class=" card-contactus title">Sankalp Rath</div>
+                                <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                <ul class="social-network social-circle center">
+                                    <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                    <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                    <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                            <div class="card-contact-us">
+                                <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+
+                                <div class=" card-contactus title">Sankalp Rath</div>
+                                <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                <ul class="social-network social-circle center">
+                                    <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                    <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                    <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+
+
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+            <div class="row">
+
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="card-contact-us">
                         <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
