--- a/contactus.html
+++ b/contactus.html
@@ -57,8 +57,7 @@
     </nav>
     <div
         style="width: 100%;height: auto;background: linear-gradient(to right bottom,#2A5470,#4C4177);padding: 10vh 5%;min-height: 100vh;">
-        <div
-            style="font-family: 'Bevan', cursive;color: rgb(3, 0, 161);font-size: 3em;text-align: center;margin-top: 1em;margin-bottom: 1em;letter-spacing: 7px;text-shadow: -2px 2px 4px white;">
+        <div class="team-header">
             OUR TEAM
 
         </div>
@@ -101,7 +100,7 @@
                                         alt="">
 
                                     <div class=" card-contactus title">Sankalp Rath</div>
-                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <div class=" card-contactus sub-title">Chief Co-Ordiator</div>
                                     <ul class="social-network social-circle center">
                                         <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
                                         <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
@@ -115,8 +114,8 @@
                                         src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
                                         alt="">
 
-                                    <div class=" card-contactus title">Sankalp Rath</div>
-                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <div class=" card-contactus title">Aradhana Behera</div>
+                                    <div class=" card-contactus sub-title">Chief Co-Ordiator</div>
                                     <ul class="social-network social-circle center">
                                         <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
                                         <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
@@ -136,8 +135,8 @@
                                         src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
                                         alt="">
 
-                                    <div class=" card-contactus title">Sankalp Rath</div>
-                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <div class=" card-contactus title">Sitakanta Bej</div>
+                                    <div class=" card-contactus sub-title">Chief Co-Ordiator</div>
                                     <ul class="social-network social-circle center">
                                         <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
                                         <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
@@ -151,8 +150,8 @@
                                         src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
                                         alt="">
 
-                                    <div class=" card-contactus title">Sankalp Rath</div>
-                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <div class=" card-contactus title">Swaraji Patnaik</div>
+                                    <div class=" card-contactus sub-title">Chief Co-Ordiator</div>
                                     <ul class="social-network social-circle center">
                                         <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
                                         <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
@@ -176,7 +175,7 @@
                                         src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
                                         alt="">
 
-                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus title">Azazul Haque</div>
                                     <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
                                     <ul class="social-network social-circle center">
                                         <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
@@ -191,7 +190,7 @@
                                         src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
                                         alt="">
 
-                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus title">Neha Rai</div>
                                     <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
                                     <ul class="social-network social-circle center">
                                         <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
