--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Technovation 2020</title>
 	<meta name="viewport" content="width=device-width,scale=1.0">
+	<meta name="msvalidate.01" content="F0EB8193BFCE1E364ACB8E26FD32DCDD" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<link rel='stylesheet' href='https://peter.build/newyears/css/style.css'>
