--- a/gallery.html
+++ b/gallery.html
@@ -90,6 +90,7 @@
                         <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(7.7px);"></div>
                         <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(9.9px);"></div>
                         <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(11.11px);"></div>
+                        <div style="position: absolute;background:linear-gradient(to bottom, rgb(22,89,218),rgb(11,48,76));height: 120px;width: 10px;background-size: contain;background-repeat: no-repeat;transform:  translate3d(105px, 0px, 5px) rotateY(-90deg);"></div>
 
                     </div>
 
