rotate link in contact us

--- a/events.html
+++ b/events.html
@@ -175,10 +175,10 @@
                                 <div class="item8 "></div>
                             </div>
                             <div class="event-card-title" data-wow-delay="0.5s">
-                                Mr. and Mrs. Technovation
+                                Mr. and Miss Technovation
                             </div>
                             <div id="dialog-3-c" class="dlg">
-                                <div class="ui-widget-content title sticky-top">Mr. and Mrs. Technovation</div>
+                                <div class="ui-widget-content title sticky-top">Mr. and Miss Technovation</div>
                                 <div class="ui-widget-content content">
                                     <p></p>
                                     <p class="para-dlg-1"><i>“Success is a series of small wins”</i></p>
