details given to contact us

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msvalidate.01" content="F0EB8193BFCE1E364ACB8E26FD32DCDD" />
+    <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech" />
+    <meta name="description" content="Branch Fest Of IGIT Sarang,CSEA Department" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | Technovation 2020</title>
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/star-effect.css">
@@ -32,8 +33,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand nav-brand-text" href="index.html"><b>TECHNOVATION <span
                         style="font-size:1.1em;">2020</span></b></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse-nav collapse navbar-collapse text-center" id="navbarText">
@@ -53,7 +53,7 @@
                         <a class="btn-nav raise" href="faqs.html">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn-nav raise" href="sponsor.html">Sponsor</a>
+                        <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
                     </li>
                     <li class="nav-item">
@@ -87,9 +87,7 @@
             <div class="container-flex text-center text-white">
                 <div class="msg wow zoomIn mx-auto">
                     <div class="msg-title"> Technovation</div>
-                    <div class="msg-body"> The Techno-Cultural fest of the department of CSEA, IGIT, Sarang is back
-                        again with a bang to provide a platform to the young ubiquotous talents to give them a new
-                        direction, and showcase their innovative and competitive skills.
+                    <div class="msg-body"> The Techno-Cultural fest of the department of CSEA, IGIT, Sarang is back again with a bang to provide a platform to the young ubiquotous talents to give them a new direction, and showcase their innovative and competitive skills.
                     </div>
                 </div>
             </div>
@@ -101,9 +99,7 @@
             <div class="container-flex text-center text-white">
                 <div class="msg wow zoomIn mx-auto">
                     <div class="msg-title"> CSEA</div>
-                    <div class="msg-body"> Recognised by the Computer Society of India, due to its advanced technical
-                        laboratories, cyber club, diversity of courses offered, numerous acheivements and recruitment
-                        policy. It is one of the best departments of IGIT emerged over
+                    <div class="msg-body"> Recognised by the Computer Society of India, due to its advanced technical laboratories, cyber club, diversity of courses offered, numerous acheivements and recruitment policy. It is one of the best departments of IGIT emerged over
                         the years.
                     </div>
                 </div>
@@ -116,9 +112,7 @@
             <div class="container-flex text-center text-white">
                 <div class="msg wow zoomIn mx-auto">
                     <div class="msg-title"> IGIT</div>
-                    <div class="msg-body"> IGIT was establised directly by the Govt. of Odisha in the name of OCE. Prior
-                        to this, under the name of MPT,it offered courses in Diploma. Later MPT was merged and the
-                        management was transfered to an autonomous society. </div>
+                    <div class="msg-body"> IGIT was establised directly by the Govt. of Odisha in the name of OCE. Prior to this, under the name of MPT,it offered courses in Diploma. Later MPT was merged and the management was transfered to an autonomous society. </div>
                 </div>
             </div>
 
@@ -150,17 +144,14 @@
                                 <div class="footer-pad">
                                     <h2 style="font-family: 'Patua One', cursive;">Follow Us</h2>
                                     <ul class="social-network social-circle">
-                                        <li><a href="https://www.facebook.com/Technovation2020/" class="icoFacebook"
-                                                title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://www.facebook.com/Technovation2020/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                                         <li><a class="icoFacebook" title="Twitter"><i class="fa fa-twitter"></i></a>
                                         </li>
-                                        <li><a href="https://www.instagram.com/technovation2020/" class="icoLinkedin"
-                                                title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://www.instagram.com/technovation2020/" class="icoLinkedin" title="Instagram"><i class="fa fa-instagram"></i></a></li>
 
                                     </ul>
                                     <br>
-                                    <a href="media/Brochure_Technovation_2020.pdf"> <button
-                                            class="btn btn-outline-info brochure">Download Brochure</button></a>
+                                    <a href="media/Brochure_Technovation_2020.pdf"> <button class="btn btn-outline-info brochure">Download Brochure</button></a>
                                 </div>
                             </div>
                         </div>
@@ -168,8 +159,7 @@
                         <div class="row">
                             <div class="col-md-12 dev">
                                 <div class="dev header">Designed and Developed By</div>
-                                <div class="dev content"><a
-                                        href="https://www.facebook.com/yashwant.kumar.988711">Yashobanta Kumar
+                                <div class="dev content"><a href="https://www.facebook.com/yashwant.kumar.988711">Yashobanta Kumar
                                         Behera</a></div>
 
                             </div>
@@ -187,18 +177,11 @@
             </footer>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
-        integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin=" anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin=" anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
