--- a/events.html
+++ b/events.html
@@ -59,7 +59,7 @@
                         <a class="btn-nav raise" href="faqs.html">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn-nav raise" href="sponsor.html">Sponsor</a>
+                        <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
                     </li>
                     <li class="nav-item">
