--- a/faqs.html
+++ b/faqs.html
@@ -41,7 +41,7 @@
                     <a class="btn-nav text-white" href="#">FAQs <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn-nav raise" href="sponsor.html">Sponsor</a>
+                    <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
                 </li>
                 <li class="nav-item">
