--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
                     <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn-nav raise" href="sponsor.html">Sponsor</a>
+                    <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
                 </li>
                 <li class="nav-item">
